# ROS2_gz_nav2_integration

./: README.md  flying_box.sdf
plasma_droid_bridge_pkg/: package.xml  setup.cfg  setup.py
plasma_droid_bridge_pkg/launch/: plasma_droid_bridge_launch.py
plasma_droid_controller_pkg/: package.xml  setup.cfg  setup.py
plasma_droid_controller_pkg/plasma_droid_controller_pkg/: plasma_droid_controller_node.py
plasma_droid_navigation_pkg/: package.xml  setup.cfg  setup.py
plasma_droid_navigation_pkg/plasma_droid_navigation_pkg/: plasma_droid_navigation_node.py
sfr_coursework2_interface_package/: CMakeLists.txt  package.xml
sfr_coursework2_interface_package/action/: DroneControl.action
